static frontend render try

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-m6gpc6c3duro7fwe.uk.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=iNlWtish7j7fALX1SXQPg3efTLXydlIk
+REACT_BACKEND_LINK=http://localhost:5001
